<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAccent"
    tools:context="com.example.hp.volcanahualt.menu2">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/imageView2"
        android:src="@drawable/mapa_nicaragua"
        android:layout_below="@+id/txtMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_principal"
        android:id="@+id/txtMenu"
        android:textSize="30dp"
        android:fontFamily="monospace"
        android:textColor="@color/NEGRO"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btn_Volcanes"
        android:layout_alignEnd="@+id/btn_Volcanes" />

    <Button
        android:layout_width="185dp"
        android:layout_height="60dp"
        android:text="Conoce los Volcanes"
        android:id="@+id/btn_Volcanes"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/txtMenu"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textColor="@color/NEGRO"
        android:background="@drawable/boton_redondo"/>

    <Button
        android:layout_width="185dp"
        android:layout_height="60dp"
        android:text="@string/prueba_de_aprendizaje"
        android:id="@+id/btn_prueba"
        android:textSize="20dp"
        android:textColor="@color/NEGRO"
        android:background="@drawable/boton_redondo"
        android:layout_below="@+id/btn_Volcanes"
        android:layout_alignLeft="@+id/btn_Volcanes"
        android:layout_alignStart="@+id/btn_Volcanes"
        android:layout_marginTop="14dp" />

    <Button
        android:layout_width="185dp"
        android:layout_height="60dp"
        android:text="@string/juegos"
        android:id="@+id/btn_puzzle"
        android:textSize="20dp"
        android:textColor="@color/NEGRO"
        android:background="@drawable/boton_redondo"
        android:layout_below="@+id/btn_prueba"
        android:layout_alignLeft="@+id/btn_prueba"
        android:layout_alignStart="@+id/btn_prueba"
        android:layout_marginTop="14dp" />

    <Button
        android:layout_width="185dp"
        android:layout_height="60dp"
        android:text="@string/creditos"
        android:id="@+id/btn_creditos"
        android:textSize="20dp"
        android:textColor="@color/NEGRO"
        android:background="@drawable/boton_redondo"
        android:layout_below="@+id/btn_puzzle"
        android:layout_alignRight="@+id/txtMenu"
        android:layout_alignEnd="@+id/txtMenu"
        android:layout_marginTop="14dp" />

    <Button
        android:layout_width="185dp"
        android:layout_height="60dp"
        android:text="@string/salir"
        android:id="@+id/btn_salir"
        android:onClick="salir"
        android:textSize="20dp"
        android:textColor="@color/NEGRO"
        android:background="@drawable/boton_redondo"
        android:layout_below="@+id/btn_creditos"
        android:layout_alignLeft="@+id/btn_creditos"
        android:layout_alignStart="@+id/btn_creditos"
        android:layout_marginTop="14dp" />

</RelativeLayout>
